--- a/src/lang/vi.json
+++ b/src/lang/vi.json
@@ -1,4 +1,5 @@
 {
+  "group.name": "Nhom 4",
   "greeting": "Xin chao",
   "farewell": "Tam biet",
 
@@ -9,5 +10,11 @@
   "label.role": "Vai tro",
   "label.goback": "Quay lai",
   "label.submit": "Xac nhan",
-  "label.loading": "Dang tai..."
+  "label.loading": "Dang tai...",
+
+  "admin.nav.accounts": "Tai Khoan",
+  "admin.nav.classes": "Lop hoc",
+  "admin.manage.accounts": "Quan ly Tai Khoan",
+  "admin.manage.classes": "Quan ly Lop Hoc",
+  "admin.mapping.students": "ID Sinh Vien"
 }
