--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -8,6 +8,9 @@
   "label.address": "Address number",
   "label.phone": "Phone number",
   "label.role": "Role",
+  "label.actions": "Actions",
+  "label.student": "Student",
+  "label.teacher": "Teacher",
   "label.goback": "Go back",
   "label.submit": "Submit",
   "label.loading": "Loading...",
