--- a/src/lang/vi.json
+++ b/src/lang/vi.json
@@ -8,6 +8,9 @@
   "label.address": "Dia chi",
   "label.phone": "So dien thoai",
   "label.role": "Vai tro",
+  "label.actions": "Thao tac",
+  "label.student": "Hoc sinh",
+  "label.teacher": "Giao vien",
   "label.goback": "Quay lai",
   "label.submit": "Xac nhan",
   "label.loading": "Dang tai...",
