state for sort and filter

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -24,5 +24,7 @@
   "admin.desc": "Descending",
   "admin.status.active": "Active",
   "admin.status.inactive": "Inactive",
-  "admin.status.all": "All"
+  "admin.status.all": "All",
+  "admin.status.asc": "Active first",
+  "admin.status.desc": "Inactive first"
 }
