--- a/src/lang/vi.json
+++ b/src/lang/vi.json
@@ -25,6 +25,6 @@
   "admin.status.active": "Hoat dong",
   "admin.status.inactive": "Vo hieu hoa",
   "admin.status.all": "Tat ca",
-  "admin.status.asc": "Hoat dong truoc",
-  "admin.status.desc": "Vo hieu hoa truoc"
+  "admin.status.asc": "Vo hieu hoa truoc",
+  "admin.status.desc": "Hoat dong truoc"
 }
