--- a/src/lang/vi.json
+++ b/src/lang/vi.json
@@ -1,34 +1,36 @@
 {
-  "group.name": "Nhom 4",
-  "greeting": "Xin chao",
-  "farewell": "Tam biet",
+  "group.name": "Nhóm 4",
+  "greeting": "Xin chào",
+  "farewell": "Tạm biệt",
 
   "label.email": "Email",
-  "label.name": "Ho Ten",
-  "label.address": "Dia chi",
-  "label.phone": "So dien thoai",
-  "label.role": "Vai tro",
-  "label.actions": "Thao tac",
-  "label.student": "Hoc sinh",
-  "label.teacher": "Giao vien",
-  "label.goback": "Quay lai",
-  "label.submit": "Xac nhan",
-  "label.loading": "Dang tai...",
+  "label.name": "Họ Tên",
+  "label.address": "Địa chỉ",
+  "label.phone": "Số điện thoại",
+  "label.role": "Vai trò",
+  "label.actions": "Thao tác",
+  "label.student": "Học sinh",
+  "label.teacher": "Giáo viên",
+  "label.goback": "Quay lại",
+  "label.submit": "Xác nhận",
+  "label.loading": "Đang tải...",
+  "label.profile": "Thông tin cá nhân",
+  "label.notification": "Thông báo",
 
-  "admin.nav.accounts": "Tai Khoan",
-  "admin.manage.accounts": "Quan ly Tai Khoan",
-  "admin.mapping.students": "ID Sinh Vien",
-  "admin.nav.classes": "Lop hoc",
-  "admin.manage.classes": "Quan ly Lop Hoc",
-  "admin.asc": "Tang dan",
-  "admin.desc": "Giam dan",
-  "admin.status.active": "Hoat dong",
-  "admin.status.inactive": "Vo hieu hoa",
-  "admin.status.all": "Tat ca",
-  "admin.status.asc": "Vo hieu hoa truoc",
-  "admin.status.desc": "Hoat dong truoc",
-  "admin.map.selectClass": "Chon lop hoc",
+  "admin.nav.accounts": "Tài Khoản",
+  "admin.manage.accounts": "Quản lý Tài Khoản",
+  "admin.mapping.students": "ID Sinh Viên",
+  "admin.nav.classes": "Lớp học",
+  "admin.manage.classes": "Quản lý Lớp Học",
+  "admin.asc": "Tăng dần",
+  "admin.desc": "Giảm dần",
+  "admin.status.active": "Hoạt động",
+  "admin.status.inactive": "Vô hiệu hóa",
+  "admin.status.all": "Tất cả",
+  "admin.status.asc": "Vô hiệu hóa trước",
+  "admin.status.desc": "Hoạt động trước",
+  "admin.map.selectClass": "Chọn lớp học",
 
-  "label.vietnamese": "Tieng Viet",
-  "label.english": "Tieng Anh"
+  "label.vietnamese": "Tiếng Việt",
+  "label.english": "Tiếng Anh"
 }
