--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -14,6 +14,8 @@
   "label.goback": "Go back",
   "label.submit": "Submit",
   "label.loading": "Loading...",
+  "label.profile": "Profile",
+  "label.notification": "Notification",
 
   "admin.nav.accounts": "Accounts",
   "admin.nav.classes": "Classes",
