--- a/src/lang/vi.json
+++ b/src/lang/vi.json
@@ -8,7 +8,6 @@
   "label.address": "Địa chỉ",
   "label.phone": "Số điện thoại",
   "label.role": "Vai trò",
-  "label.actions": "Thao tác",
   "label.student": "Học sinh",
   "label.teacher": "Giáo viên",
   "label.goback": "Quay lại",
@@ -16,6 +15,33 @@
   "label.loading": "Đang tải...",
   "label.profile": "Thông tin cá nhân",
   "label.notification": "Thông báo",
+  "label.classlist": "Danh sách lớp học",
+  "label.joinbycode": "Tham gia lớp học",
+  "label.gradescore": "Điểm số",
+  "label.class.home": "Lớp học",
+  "label.class.people": "Thành viên",
+  "label.class.teachers": "Giáo viên",
+  "label.class.students": "Học sinh",
+  "label.class.score.upload": "Cập nhật điểm",
+  "label.class.score.students": "Điểm học sinh",
+  "label.class.score.structure": "Cấu trúc điểm",
+  "label.class.score.request": "Khiếu nại",
+  "label.download.template": "Tải mẫu",
+  "label.upload": "Tải lên",
+  "label.export.excel": "Xuất Excel",
+  "label.index": "STT",
+  "label.student.code": "Mã học sinh",
+  "label.fullname": "Họ tên",
+  "label.actions": "Thao tác",
+  "label.show": "Hiển thị",
+  "label.hide": "Ẩn",
+  "label.percentage": "Phần trăm",
+  "label.add.score": "Thêm điểm",
+  "label.add.score.name": "Tên điểm",
+  "label.view.comments": "Xem bình luận",
+  "label.actual.score": "Điểm thực tế",
+  "label.expected.score": "Điểm mong đợi",
+  "label.write.comment": "Viết bình luận",
 
   "admin.nav.accounts": "Tài Khoản",
   "admin.manage.accounts": "Quản lý Tài Khoản",
@@ -32,5 +58,18 @@
   "admin.map.selectClass": "Chọn lớp học",
 
   "label.vietnamese": "Tiếng Việt",
-  "label.english": "Tiếng Anh"
+  "label.english": "Tiếng Anh",
+
+  "label.button.confirm": "Xác nhận",
+  "label.button.download": "Tải xuống",
+  "label.button.cancel": "Hủy",
+  "label.button.close": "Đóng",
+  "label.button.edit": "Chỉnh sửa",
+  "label.button.map.code": "Map MSSV",
+  "label.button.add": "Thêm",
+  "label.button.remove": "Xóa",
+  "label.button.approve": "Phê duyệt",
+  "label.button.reject": "Từ chối",
+  "label.button.send": "Gửi",
+  "label.button.goback": "Quay lại"
 }
