--- a/src/lang/vi.json
+++ b/src/lang/vi.json
@@ -42,6 +42,11 @@
   "label.actual.score": "Điểm thực tế",
   "label.expected.score": "Điểm mong đợi",
   "label.write.comment": "Viết bình luận",
+  "label.class.name": "Tên lớp học",
+  "label.class.code": "Mã lớp học",
+  "label.status": "Trạng thái",
+  "label.description": "Mô tả",
+  "label.keywords": "Từ khóa",
 
   "admin.nav.accounts": "Tài Khoản",
   "admin.manage.accounts": "Quản lý Tài Khoản",
@@ -56,6 +61,8 @@
   "admin.status.asc": "Vô hiệu hóa trước",
   "admin.status.desc": "Hoạt động trước",
   "admin.map.selectClass": "Chọn lớp học",
+  "admin.reset.code": "Đặt lại mã",
+  "admin.add.code": "Thêm mã",
 
   "label.vietnamese": "Tiếng Việt",
   "label.english": "Tiếng Anh",
@@ -65,11 +72,19 @@
   "label.button.cancel": "Hủy",
   "label.button.close": "Đóng",
   "label.button.edit": "Chỉnh sửa",
-  "label.button.map.code": "Map MSSV",
+  "label.button.map.code": "Thêm MSSV",
+  "label.button.unmap.code": "Xóa MSSV",
   "label.button.add": "Thêm",
   "label.button.remove": "Xóa",
   "label.button.approve": "Phê duyệt",
   "label.button.reject": "Từ chối",
   "label.button.send": "Gửi",
+  "label.button.block": "Khóa",
+  "label.button.unblock": "Mở khóa",
+  "label.button.filter": "Lọc",
+  "label.button.sort": "Sắp xếp",
+  "label.button.apply": "Áp dụng",
+  "label.button.previous": "Trước",
+  "label.button.next": "Sau",
   "label.button.goback": "Quay lại"
 }
