--- a/src/lang/vi.json
+++ b/src/lang/vi.json
@@ -14,6 +14,7 @@
   "label.goback": "Quay lai",
   "label.submit": "Xac nhan",
   "label.loading": "Dang tai...",
+  "label.studentid": "Ma so sinh vien",
 
   "admin.nav.accounts": "Tai Khoan",
   "admin.manage.accounts": "Quan ly Tai Khoan",
