--- a/src/lang/vi.json
+++ b/src/lang/vi.json
@@ -14,6 +14,11 @@
   "label.goback": "Quay lai",
   "label.submit": "Xac nhan",
   "label.loading": "Dang tai...",
+  "label.studentid": "Ma so sinh vien",
+  "label.composition": "Thành phần điểm",
+  "label.percentage": "Tỷ lệ",
+  "label.grade": "Điểm",
+  "label.overall": "Tổng kết",
 
   "admin.nav.accounts": "Tai Khoan",
   "admin.manage.accounts": "Quan ly Tai Khoan",
