--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -14,6 +14,39 @@
   "label.goback": "Go back",
   "label.submit": "Submit",
   "label.loading": "Loading...",
+  "label.profile": "Profile",
+  "label.notification": "Notification",
+  "label.classlist": "Class list",
+  "label.joinbycode": "Join by code",
+  "label.gradescore": "Score",
+  "label.class.home": "Home",
+  "label.class.people": "People",
+  "label.class.teachers": "Teachers",
+  "label.class.students": "Students",
+  "label.class.score.upload": "Upload",
+  "label.class.score.students": "Students Grade",
+  "label.class.score.structure": "Score Structure",
+  "label.class.score.request": "Request",
+  "label.download.template": "Download template",
+  "label.upload": "Upload file",
+  "label.export.excel": "Export to Excel",
+  "label.index": "Index",
+  "label.student.code": "Student code",
+  "label.fullname": "Full name",
+  "label.show": "Show",
+  "label.hide": "Hide",
+  "label.percentage": "Percentage",
+  "label.add.score": "Add score",
+  "label.add.score.name": "Score name",
+  "label.view.comments": "View comments",
+  "label.actual.score": "Actual score",
+  "label.expected.score": "Expected score",
+  "label.write.comment": "Write comment",
+  "label.class.name": "Class name",
+  "label.class.code": "Class code",
+  "label.status": "Status",
+  "label.description": "Description",
+  "label.keywords": "Keywords",
   "label.studentid": "Student ID",
   "label.composition": "Composition",
   "label.percentage": "Percentage",
@@ -32,5 +65,28 @@
   "admin.status.all": "All",
   "admin.status.asc": "Inactive first",
   "admin.status.desc": "Active first",
-  "admin.map.selectClass": "Select class"
+  "admin.map.selectClass": "Select class",
+
+  "label.vietnamese": "Vietnamese",
+  "label.english": "English",
+
+  "label.button.confirm": "Confirm",
+  "label.button.download": "Download",
+  "label.button.goback": "Go back",
+  "label.button.close": "Close",
+  "label.button.edit": "Edit",
+  "label.button.map.code": "Map code",
+  "label.button.add": "Add",
+  "label.button.remove": "Remove",
+  "label.button.approve": "Approve",
+  "label.button.reject": "Reject",
+  "label.button.send": "Send",
+  "label.button.block": "Block",
+  "label.button.unblock": "Unblock",
+  "label.button.filter": "Filter",
+  "label.button.sort": "Sort",
+  "label.button.apply": "Apply",
+  "label.button.previous": "Previous",
+  "label.button.next": "Next",
+  "label.button.cancel": "Cancel"
 }
