--- a/src/lang/vi.json
+++ b/src/lang/vi.json
@@ -1,36 +1,95 @@
 {
-  "group.name": "Nhom 4",
-  "greeting": "Xin chao",
-  "farewell": "Tam biet",
+  "group.name": "Nhóm 4",
+  "greeting": "Xin chào",
+  "farewell": "Tạm biệt",
 
   "label.email": "Email",
-  "label.name": "Ho Ten",
-  "label.address": "Dia chi",
-  "label.phone": "So dien thoai",
-  "label.role": "Vai tro",
-  "label.actions": "Thao tac",
-  "label.student": "Hoc sinh",
-  "label.teacher": "Giao vien",
-  "label.goback": "Quay lai",
-  "label.submit": "Xac nhan",
-  "label.loading": "Dang tai...",
+  "label.name": "Họ Tên",
+  "label.address": "Địa chỉ",
+  "label.phone": "Số điện thoại",
+  "label.role": "Vai trò",
+  "label.student": "Học sinh",
+  "label.teacher": "Giáo viên",
+  "label.goback": "Quay lại",
+  "label.submit": "Xác nhận",
+  "label.loading": "Đang tải...",
+  "label.profile": "Thông tin cá nhân",
+  "label.notification": "Thông báo",
+  "label.classlist": "Danh sách lớp học",
+  "label.joinbycode": "Tham gia lớp học",
+  "label.gradescore": "Điểm số",
+  "label.class.home": "Lớp học",
+  "label.class.people": "Thành viên",
+  "label.class.teachers": "Giáo viên",
+  "label.class.students": "Học sinh",
+  "label.class.score.upload": "Cập nhật điểm",
+  "label.class.score.students": "Điểm học sinh",
+  "label.class.score.structure": "Cấu trúc điểm",
+  "label.class.score.request": "Khiếu nại",
+  "label.download.template": "Tải mẫu",
+  "label.upload": "Tải lên",
+  "label.export.excel": "Xuất Excel",
+  "label.index": "STT",
+  "label.student.code": "Mã học sinh",
+  "label.fullname": "Họ tên",
+  "label.actions": "Thao tác",
+  "label.show": "Hiển thị",
+  "label.hide": "Ẩn",
+  "label.percentage": "Phần trăm",
+  "label.add.score": "Thêm điểm",
+  "label.add.score.name": "Tên điểm",
+  "label.view.comments": "Xem bình luận",
+  "label.actual.score": "Điểm thực tế",
+  "label.expected.score": "Điểm mong đợi",
+  "label.write.comment": "Viết bình luận",
+  "label.class.name": "Tên lớp học",
+  "label.class.code": "Mã lớp học",
+  "label.status": "Trạng thái",
+  "label.description": "Mô tả",
+  "label.keywords": "Từ khóa",
   "label.studentid": "Ma so sinh vien",
   "label.composition": "Thành phần điểm",
   "label.percentage": "Tỷ lệ",
   "label.grade": "Điểm",
   "label.overall": "Tổng kết",
 
-  "admin.nav.accounts": "Tai Khoan",
-  "admin.manage.accounts": "Quan ly Tai Khoan",
-  "admin.mapping.students": "ID Sinh Vien",
-  "admin.nav.classes": "Lop hoc",
-  "admin.manage.classes": "Quan ly Lop Hoc",
-  "admin.asc": "Tang dan",
-  "admin.desc": "Giam dan",
-  "admin.status.active": "Hoat dong",
-  "admin.status.inactive": "Vo hieu hoa",
-  "admin.status.all": "Tat ca",
-  "admin.status.asc": "Vo hieu hoa truoc",
-  "admin.status.desc": "Hoat dong truoc",
-  "admin.map.selectClass": "Chon lop hoc"
+  "admin.nav.accounts": "Tài Khoản",
+  "admin.manage.accounts": "Quản lý Tài Khoản",
+  "admin.mapping.students": "ID Sinh Viên",
+  "admin.nav.classes": "Lớp học",
+  "admin.manage.classes": "Quản lý Lớp Học",
+  "admin.asc": "Tăng dần",
+  "admin.desc": "Giảm dần",
+  "admin.status.active": "Hoạt động",
+  "admin.status.inactive": "Vô hiệu hóa",
+  "admin.status.all": "Tất cả",
+  "admin.status.asc": "Vô hiệu hóa trước",
+  "admin.status.desc": "Hoạt động trước",
+  "admin.map.selectClass": "Chọn lớp học",
+  "admin.reset.code": "Đặt lại mã",
+  "admin.add.code": "Thêm mã",
+
+  "label.vietnamese": "Tiếng Việt",
+  "label.english": "Tiếng Anh",
+
+  "label.button.confirm": "Xác nhận",
+  "label.button.download": "Tải xuống",
+  "label.button.cancel": "Hủy",
+  "label.button.close": "Đóng",
+  "label.button.edit": "Chỉnh sửa",
+  "label.button.map.code": "Thêm MSSV",
+  "label.button.unmap.code": "Xóa MSSV",
+  "label.button.add": "Thêm",
+  "label.button.remove": "Xóa",
+  "label.button.approve": "Phê duyệt",
+  "label.button.reject": "Từ chối",
+  "label.button.send": "Gửi",
+  "label.button.block": "Khóa",
+  "label.button.unblock": "Mở khóa",
+  "label.button.filter": "Lọc",
+  "label.button.sort": "Sắp xếp",
+  "label.button.apply": "Áp dụng",
+  "label.button.previous": "Trước",
+  "label.button.next": "Sau",
+  "label.button.goback": "Quay lại"
 }
