--- a/src/lang/vi.json
+++ b/src/lang/vi.json
@@ -54,6 +54,7 @@
   "label.score.publish": "Công bố điểm",
   "label.select.score.type": "Chọn loại điểm",
   "label.publish.score": "Công bố điểm",
+  "label.list.comments": "Danh sách bình luận",
 
   "admin.nav.accounts": "Tài Khoản",
   "admin.manage.accounts": "Quản lý Tài Khoản",
@@ -91,6 +92,7 @@
   "label.button.filter": "Lọc",
   "label.button.sort": "Sắp xếp",
   "label.button.apply": "Áp dụng",
+  "label.button.detail": "Xem chi tiết",
   "label.button.previous": "Trước",
   "label.button.next": "Sau",
   "label.button.goback": "Quay lại"
