add notification in message

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -73,6 +73,8 @@
   "label.vietnamese": "Vietnamese",
   "label.english": "English",
 
+  "notif.receive.comment": "You have a new comment in {{name}}",
+
   "label.button.confirm": "Confirm",
   "label.button.download": "Download",
   "label.button.goback": "Go back",
