--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -74,6 +74,7 @@
   "label.english": "English",
 
   "notif.receive.comment": "You have a new comment in {{name}}",
+  "notif.receive.request": "You have a new request from {{name}}",
 
   "label.button.confirm": "Confirm",
   "label.button.download": "Download",
