--- a/src/lang/vi.json
+++ b/src/lang/vi.json
@@ -76,6 +76,7 @@
   "label.english": "Tiếng Anh",
 
   "notif.receive.comment": "Bạn nhận được một bình luận mới trong {{name}}",
+  "notif.receive.comment.from": "Bạn nhận được một bình luận mới từ {{name}}",
   "notif.receive.request": "Bạn nhận được một khiếu nại từ {{name}}",
   "notif.receive.reject": "Khiếu nại của bạn đã bị từ chối bởi  {{name}}",
   "notif.receive.approve": "Khiếu nại của bạn đã được phê duyệt bởi {{name}}",
