--- a/src/lang/vi.json
+++ b/src/lang/vi.json
@@ -104,5 +104,6 @@
   "label.button.detail": "Xem chi tiết",
   "label.button.previous": "Trước",
   "label.button.next": "Sau",
+  "label.button.logout": "Đăng xuất",
   "label.button.goback": "Quay lại"
 }
