done review score and comments

--- a/src/lang/vi.json
+++ b/src/lang/vi.json
@@ -48,7 +48,7 @@
   "label.keywords": "Từ khóa",
   "label.studentid": "Ma so sinh vien",
   "label.composition": "Thành phần điểm",
-  "label.percentage": "Tỷ lệ",
+  "label.percentage": "Tỷ lệ (%)",
   "label.grade": "Điểm",
   "label.overall": "Tổng kết",
   "label.score.publish": "Công bố điểm",
