--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -35,7 +35,7 @@
   "label.fullname": "Full name",
   "label.show": "Show",
   "label.hide": "Hide",
-  "label.percentage": "Percentage",
+  "label.percentage": "Percentage (%)",
   "label.add.score": "Add score",
   "label.add.score.name": "Score name",
   "label.view.comments": "View comments",
