Feature/student grade request (#20)
* done review score and comments

* add translate

---------

Co-authored-by: 20120435 <bich1042002@gmail.com>

--- a/src/lang/vi.json
+++ b/src/lang/vi.json
@@ -48,13 +48,20 @@
   "label.keywords": "Từ khóa",
   "label.studentid": "Ma so sinh vien",
   "label.composition": "Thành phần điểm",
-  "label.percentage": "Tỷ lệ",
+  "label.percentage": "Tỷ lệ (%)",
   "label.grade": "Điểm",
   "label.overall": "Tổng kết",
   "label.score.publish": "Công bố điểm",
   "label.select.score.type": "Chọn loại điểm",
   "label.publish.score": "Công bố điểm",
   "label.list.comments": "Danh sách bình luận",
+  "label.scorerequests": "Danh sách phúc khảo",
+  "label.request.title": "Tiêu đề",
+  "label.request.score.actual": "Điểm hiện tại",
+  "label.request.score.expected": "Điểm mong muốn",
+  "label.request.explain": "Lý do của bạn",
+  "label.create":"Tạo",
+  "label.cancel":"Hủy",
 
   "admin.nav.accounts": "Tài Khoản",
   "admin.manage.accounts": "Quản lý Tài Khoản",
