--- a/src/lang/vi.json
+++ b/src/lang/vi.json
@@ -48,7 +48,7 @@
   "label.keywords": "Từ khóa",
   "label.studentid": "Ma so sinh vien",
   "label.composition": "Thành phần điểm",
-  "label.percentage": "Tỷ lệ (%)",
+  "label.percentage": "Tỷ lệ",
   "label.grade": "Điểm",
   "label.overall": "Tổng kết",
   "label.score.publish": "Công bố điểm",
@@ -60,8 +60,8 @@
   "label.request.score.actual": "Điểm hiện tại",
   "label.request.score.expected": "Điểm mong muốn",
   "label.request.explain": "Lý do của bạn",
-  "label.create":"Tạo",
-  "label.cancel":"Hủy",
+  "label.create": "Tạo",
+  "label.cancel": "Hủy",
 
   "admin.nav.accounts": "Tài Khoản",
   "admin.manage.accounts": "Quản lý Tài Khoản",
