fix copy in admin

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -23,7 +23,7 @@
   "label.class.people": "People",
   "label.class.teachers": "Teachers",
   "label.class.students": "Students",
-  "label.class.score.upload": "Upload",
+  "label.class.score.upload": "Upload Students ID",
   "label.class.score.students": "Students Grade",
   "label.class.score.structure": "Score Structure",
   "label.class.score.request": "Request",
