--- a/src/lang/vi.json
+++ b/src/lang/vi.json
@@ -22,7 +22,7 @@
   "label.class.people": "Thành viên",
   "label.class.teachers": "Giáo viên",
   "label.class.students": "Học sinh",
-  "label.class.score.upload": "Cập nhật điểm",
+  "label.class.score.upload": "Cập nhật ID",
   "label.class.score.students": "Điểm học sinh",
   "label.class.score.structure": "Cấu trúc điểm",
   "label.class.score.request": "Khiếu nại",
