--- a/src/lang/vi.json
+++ b/src/lang/vi.json
@@ -98,6 +98,7 @@
   "label.button.cancel": "Hủy",
   "label.button.close": "Đóng",
   "label.button.edit": "Chỉnh sửa",
+  "label.button.init.score": "Khởi tạo điểm",
   "label.button.map.code": "Thêm MSSV",
   "label.button.unmap.code": "Xóa MSSV",
   "label.button.add": "Thêm",
